--- a/bi_product_dimension/i18n/pt_BR.po
+++ b/bi_product_dimension/i18n/pt_BR.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: Odoo Server 14.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-06-07 13:00+0000\n"
-"PO-Revision-Date: 2023-08-04 14:20-0300\n"
+"PO-Revision-Date: 2023-08-04 15:22-0300\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: es\n"
@@ -69,7 +69,7 @@ msgstr "Empresas"
 #. module: bi_product_dimension
 #: model_terms:ir.ui.view,arch_db:bi_product_dimension.view_company_extend_form
 msgid "Company Registration No."
-msgstr "CNPJ"
+msgstr "C.N.P.J."
 
 #. module: bi_product_dimension
 #: model:ir.model,name:bi_product_dimension.model_res_config_settings
@@ -81,7 +81,7 @@ msgstr "Opções de Configuração"
 #: model:ir.model.fields.selection,name:bi_product_dimension.selection__purchase_order__dispatch_type__deliver
 #: model:ir.model.fields.selection,name:bi_product_dimension.selection__sale_order__dispatch_type__deliver
 msgid "Deliver"
-msgstr "Entrega"
+msgstr "Entregar"
 
 #. module: bi_product_dimension
 #: model:ir.model.fields,field_description:bi_product_dimension.field_account_bank_statement_line__dispatch_type
@@ -90,7 +90,7 @@ msgstr "Entrega"
 #: model:ir.model.fields,field_description:bi_product_dimension.field_purchase_order__dispatch_type
 #: model:ir.model.fields,field_description:bi_product_dimension.field_sale_order__dispatch_type
 msgid "Dispatch Type"
-msgstr "Tipo de entrega"
+msgstr "Tipo de Entrega"
 
 #. module: bi_product_dimension
 #: model:ir.model.fields,field_description:bi_product_dimension.field_account_move__display_name
@@ -105,7 +105,7 @@ msgstr "Tipo de entrega"
 #: model:ir.model.fields,field_description:bi_product_dimension.field_stock_move__display_name
 #: model:ir.model.fields,field_description:bi_product_dimension.field_stock_rule__display_name
 msgid "Display Name"
-msgstr "Mostrar Nome"
+msgstr "Nome de Exibição"
 
 #. module: bi_product_dimension
 #: model:ir.model.fields,field_description:bi_product_dimension.field_stock_rule__height
@@ -154,12 +154,12 @@ msgstr "ID"
 #. module: bi_product_dimension
 #: model:ir.model,name:bi_product_dimension.model_account_move
 msgid "Journal Entry"
-msgstr "Asiento contable"
+msgstr "Entrada de Diário"
 
 #. module: bi_product_dimension
 #: model:ir.model,name:bi_product_dimension.model_account_move_line
 msgid "Journal Item"
-msgstr "Apunte contable"
+msgstr "Item de Diário"
 
 #. module: bi_product_dimension
 #: model:ir.model.fields,field_description:bi_product_dimension.field_account_move____last_update
@@ -174,7 +174,7 @@ msgstr "Apunte contable"
 #: model:ir.model.fields,field_description:bi_product_dimension.field_stock_move____last_update
 #: model:ir.model.fields,field_description:bi_product_dimension.field_stock_rule____last_update
 msgid "Last Modified on"
-msgstr "Última modificación el"
+msgstr "Última Modificação"
 
 #. module: bi_product_dimension
 #: model:ir.model.fields,field_description:bi_product_dimension.field_account_move_line__net_price
@@ -184,57 +184,57 @@ msgstr "Última modificación el"
 #: model_terms:ir.ui.view,arch_db:bi_product_dimension.report_invoice_report_inherit_umlilo_module_bi
 #: model_terms:ir.ui.view,arch_db:bi_product_dimension.report_saleorder_document_inherit_umlilo_module_bi
 msgid "Net Price"
-msgstr "Precio neto"
+msgstr "Peço Líquido"
 
 #. module: bi_product_dimension
 #: model:ir.model.fields.selection,name:bi_product_dimension.selection__res_company__price_calculation__dimension
 msgid "Price Calculation based on Dimension(m2)"
-msgstr "Cálculo de precio basado en dimensión (m2)"
+msgstr "Cálculo de preço baseado nas dimensões (m2)"
 
 #. module: bi_product_dimension
 #: model:ir.model.fields.selection,name:bi_product_dimension.selection__res_company__price_calculation__qty
 msgid "Price Calculation based on Qty"
-msgstr "Cálculo de precio basado en Cant"
+msgstr "Cálculo de Preço baseado na quantidade"
 
 #. module: bi_product_dimension
 #: model:ir.model,name:bi_product_dimension.model_mrp_production
 msgid "Production Order"
-msgstr "Orden de producción"
+msgstr "Ordem de Produção"
 
 #. module: bi_product_dimension
 #: model:ir.model,name:bi_product_dimension.model_purchase_order
 msgid "Purchase Order"
-msgstr "Orden de compra"
+msgstr "Pedido de Compra"
 
 #. module: bi_product_dimension
 #: model:ir.model,name:bi_product_dimension.model_purchase_order_line
 msgid "Purchase Order Line"
-msgstr "Línea de pedido de compra"
+msgstr "Linha de Pedido de Compra"
 
 #. module: bi_product_dimension
 #: model:ir.model,name:bi_product_dimension.model_sale_order
 msgid "Sales Order"
-msgstr "Pedido de venta"
+msgstr "Pedido de Venda"
 
 #. module: bi_product_dimension
 #: model:ir.model,name:bi_product_dimension.model_sale_order_line
 msgid "Sales Order Line"
-msgstr "Línea de pedido de venta"
+msgstr "Linha de Pedido de Venda"
 
 #. module: bi_product_dimension
 #: model:ir.model,name:bi_product_dimension.model_stock_move
 msgid "Stock Move"
-msgstr "Movimiento de existencias"
+msgstr "Movimento de Estoque"
 
 #. module: bi_product_dimension
 #: model:ir.model,name:bi_product_dimension.model_stock_rule
 msgid "Stock Rule"
-msgstr "Regla de Inventario"
+msgstr "Regra de Inventário"
 
 #. module: bi_product_dimension
 #: model:ir.model.fields,field_description:bi_product_dimension.field_res_company__vat_registration_no
 msgid "VAT Registration No."
-msgstr "CNPJ"
+msgstr "Nro de Registro de I.V.A."
 
 #. module: bi_product_dimension
 #: model:ir.model.fields,field_description:bi_product_dimension.field_stock_rule__width
@@ -248,18 +248,18 @@ msgstr "Ancho"
 #: model:ir.model.fields,field_description:bi_product_dimension.field_sale_order_line__width
 #: model:ir.model.fields,field_description:bi_product_dimension.field_stock_move__width
 msgid "Width (Mt.)"
-msgstr "Ancho (Mt.)"
+msgstr "Largura (m)"
 
 #. module: bi_product_dimension
 #: model:ir.model.fields.selection,name:bi_product_dimension.selection__account_move__dispatch_type__courier
 #: model:ir.model.fields.selection,name:bi_product_dimension.selection__purchase_order__dispatch_type__courier
 #: model:ir.model.fields.selection,name:bi_product_dimension.selection__sale_order__dispatch_type__courier
 msgid "courier"
-msgstr "mensajera"
+msgstr "entrega"
 
 #. module: bi_product_dimension
 #: model_terms:ir.ui.view,arch_db:bi_product_dimension.inherit_report_purchaseorder_document
 #: model_terms:ir.ui.view,arch_db:bi_product_dimension.report_invoice_report_inherit_umlilo_module_bi
 #: model_terms:ir.ui.view,arch_db:bi_product_dimension.report_saleorder_document_inherit_umlilo_module_bi
 msgid "width (Mt.)"
-msgstr "ancho (Mt.)"
+msgstr "largura (m)"
